vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__aggregate_signal_asignment-2.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"(foo, bar) <= baz;\",)"
---
ConcurrentSimpleSignalAssignment
  AggregateTarget
    Aggregate
      LeftPar
      ElementAssociationList
        ElementAssociation
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'foo'
        Comma
        ElementAssociation
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'bar'
      RightPar
  LTE
  WaveformElements
    WaveformElement
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'baz'
  SemiColon
