vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__block.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\nname : block\n  constant const : natural := 0;\nbegin\n  name2: foo(clk);\nend block;\",)"
---
BlockStatement
  StmtLabel
    Identifier 'name'
    Colon
  BlockPreamble
    Keyword(Block)
  Declarations
    ConstantDeclaration
      Keyword(Constant)
      IdentifierList
        Identifier 'const'
      Colon
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'natural'
      InitialValue
        ColonEq
        LiteralExpression
          AbstractLiteral '0'
      SemiColon
  DeclarationStatementSeparator
    Keyword(Begin)
  ConcurrentProcedureCallOrComponentInstantiationStatement
    StmtLabel
      Identifier 'name2'
      Colon
    Name
      NameDesignatorPrefix
        Identifier 'foo'
      ParenthesizedName
        LeftPar
        AssociationList
          AssociationElement
            ActualPart
              ActualPartExpression
                NameExpression
                  Name
                    NameDesignatorPrefix
                      Identifier 'clk'
        RightPar
    SemiColon
  BlockEpilogue
    Keyword(End)
    Keyword(Block)
    SemiColon
