vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__block_variant.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\nname : block is\nbegin\nend block name;\",)"
---
BlockStatement
  Label
    Identifier 'name'
    Colon
  BlockPreamble
    Keyword(Block)
    Keyword(Is)
  DeclarationStatementSeparator
    Keyword(Begin)
  BlockEpilogue
    Keyword(End)
    Keyword(Block)
    Identifier 'name'
    SemiColon
