vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__case_generate.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ngen: case expr(0) + 2 generate\n  when 1 | 2 =>\n    sig <= value;\n  when others =>\n    foo(clk);\nend generate;\",)"
---
CaseGenerateStatement
  Label
    Identifier 'gen'
    Colon
  CaseGenerateStatementPreamble
    Keyword(Case)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'expr'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '0'
            RightPar
      Plus
      LiteralExpression
        AbstractLiteral '2'
    Keyword(Generate)
  CaseGenerateAlternative
    Keyword(When)
    Choices
      ExpressionChoice
        LiteralExpression
          AbstractLiteral '1'
      Bar
      ExpressionChoice
        LiteralExpression
          AbstractLiteral '2'
    RightArrow
    GenerateStatementBody
      ConcurrentStatements
        ConcurrentSimpleSignalAssignment
          NameTarget
            Name
              NameDesignatorPrefix
                Identifier 'sig'
          LTE
          WaveformElements
            WaveformElement
              NameExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'value'
          SemiColon
  CaseGenerateAlternative
    Keyword(When)
    Choices
      OthersChoice
        Keyword(Others)
    RightArrow
    GenerateStatementBody
      ConcurrentStatements
        ConcurrentProcedureCallOrComponentInstantiationStatement
          Name
            NameDesignatorPrefix
              Identifier 'foo'
            ParenthesizedName
              LeftPar
              AssociationList
                AssociationElement
                  ActualPart
                    ActualPartExpression
                      NameExpression
                        Name
                          NameDesignatorPrefix
                            Identifier 'clk'
              RightPar
          SemiColon
  CaseGenerateStatementEpilogue
    Keyword(End)
    Keyword(Generate)
    SemiColon
