vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__case_generate_alternative_label.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ngen1: case expr(0) + 2 generate\n  when alt1: 1 | 2 =>\n    sig <= value;\n  when alt2: others =>\n    foo(clk);\nend generate gen1;\",)"
---
CaseGenerateStatement
  Label
    Identifier 'gen1'
    Colon
  CaseGenerateStatementPreamble
    Keyword(Case)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'expr'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '0'
            RightPar
      Plus
      LiteralExpression
        AbstractLiteral '2'
    Keyword(Generate)
  CaseGenerateAlternative
    Keyword(When)
    Label
      Identifier 'alt1'
      Colon
    Choices
      ExpressionChoice
        LiteralExpression
          AbstractLiteral '1'
      Bar
      ExpressionChoice
        LiteralExpression
          AbstractLiteral '2'
    RightArrow
    GenerateStatementBody
      ConcurrentStatements
        ConcurrentSimpleSignalAssignment
          NameTarget
            Name
              NameDesignatorPrefix
                Identifier 'sig'
          LTE
          WaveformElements
            WaveformElement
              NameExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'value'
          SemiColon
  CaseGenerateAlternative
    Keyword(When)
    Label
      Identifier 'alt2'
      Colon
    Choices
      OthersChoice
        Keyword(Others)
    RightArrow
    GenerateStatementBody
      ConcurrentStatements
        ConcurrentProcedureCallOrComponentInstantiationStatement
          Name
            NameDesignatorPrefix
              Identifier 'foo'
            ParenthesizedName
              LeftPar
              AssociationList
                AssociationElement
                  ActualPart
                    ActualPartExpression
                      NameExpression
                        Name
                          NameDesignatorPrefix
                            Identifier 'clk'
              RightPar
          SemiColon
  CaseGenerateStatementEpilogue
    Keyword(End)
    Keyword(Generate)
    Identifier 'gen1'
    SemiColon
