vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__component_aspect_maps.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ninst: component lib.foo.bar\n  generic map (\n   const => 1\n  )\n  port map (\n   clk => clk_foo\n  );\",)"
---
ComponentInstantiationStatement
  Label
    Identifier 'inst'
    Colon
  ComponentInstantiatedUnit
    Keyword(Component)
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
      SelectedName
        Dot
        Identifier 'bar'
  GenericMapAspect
    Keyword(Generic)
    Keyword(Map)
    LeftPar
    AssociationList
      AssociationElement
        FormalPart
          Name
            NameDesignatorPrefix
              Identifier 'const'
        RightArrow
        ActualPart
          ActualPartExpression
            LiteralExpression
              AbstractLiteral '1'
    RightPar
  PortMapAspect
    Keyword(Port)
    Keyword(Map)
    LeftPar
    AssociationList
      AssociationElement
        FormalPart
          Name
            NameDesignatorPrefix
              Identifier 'clk'
        RightArrow
        ActualPart
          ActualPartExpression
            NameExpression
              Name
                NameDesignatorPrefix
                  Identifier 'clk_foo'
    RightPar
  SemiColon
