vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__component_instantiation.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"inst: component lib.foo.bar;\",)"
---
ComponentInstantiationStatement
  Label
    Identifier 'inst'
    Colon
  InstantiatedComponent
    Keyword(Component)
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
      SelectedName
        Dot
        Identifier 'bar'
  SemiColon
