vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__component_no_keyword_generic_aspect_map.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ninst: lib.foo.bar\n  generic map (\n   const => 1\n  );\",)"
---
ComponentInstantiationStatement
  Label
    Identifier 'inst'
    Colon
  InstantiatedComponent
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
      SelectedName
        Dot
        Identifier 'bar'
  GenericMapAspect
    Keyword(Generic)
    Keyword(Map)
    LeftPar
    AssociationList
      AssociationElement
        Formal
          Name
            NameDesignatorPrefix
              Identifier 'const'
          RightArrow
        ActualPart
          ActualPartExpression
            LiteralExpression
              AbstractLiteral '1'
    RightPar
  SemiColon
