vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__component_no_keyword_port_aspect_map.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ninst: lib.foo.bar\n  port map (\n   clk => clk_foo\n  );\",)"
---
ComponentInstantiationStatement
  Label
    Identifier 'inst'
    Colon
  InstantiatedComponent
    Name
      NameDesignatorPrefix
        Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
      SelectedName
        Dot
        Identifier 'bar'
  PortMapAspect
    Keyword(Port)
    Keyword(Map)
    LeftPar
    AssociationList
      AssociationElement
        Formal
          Name
            NameDesignatorPrefix
              Identifier 'clk'
          RightArrow
        ActualPart
          ActualPartExpression
            NameExpression
              Name
                NameDesignatorPrefix
                  Identifier 'clk_foo'
    RightPar
  SemiColon
